--- a/construction/src/Components/style.css
+++ b/construction/src/Components/style.css
@@ -14,8 +14,8 @@ body{
 .header{
     text-align: center;
     line-height: 5rem;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+    display: flex;
+    justify-content: space-around;
 }
 .whole{
     display: grid;
@@ -23,9 +23,6 @@ body{
     width: 100%;
     row-gap: 1rem;
 }
-/* .pic{
-    width:100%;
-} */
 .pic img{
     height: 100%;
     width: 100%;
@@ -75,7 +72,7 @@ body{
     padding:0px 10px;
 }
 .header .navbar{
-    width: 80%;
+    width: 30%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -95,4 +92,47 @@ body{
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.356);
     transform:translateY(-2px);
     transition: all 0.2s linear;
+}
+.buttonchilds{
+    width:50%;
+    display: flex;
+    justify-content: space-around;
+}
+
+@media only screen and (max-width: 768px) {
+    body{
+        font-size: 10px;
+    }
+    button{
+        padding: 0;
+        font-size:10px;
+    }
+    .header .navbar{
+        width: 100%;
+    }
+    .buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        row-gap: 1rem;
+        padding: 0;
+        font-size: 10px;
+    }
+    .buttons input{
+        width:50%;
+    }
+    .buttonchilds{
+        width: 100%;
+    }
+}
+
+@media only screen and(max-width : 425px) {
+    body{
+        font-size: 10px;
+    }
+    .buttonchilds button{
+        padding: 0px;
+        font-size: 15px;
+    }
 }
