--- a/construction/src/Components/ProductGridStyle.css
+++ b/construction/src/Components/ProductGridStyle.css
@@ -17,4 +17,16 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.541);
     transform: translateY(-2px);
     transition: all 0.2s linear;
+}       
+.product-image {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
 }
